# reviewing-ai-prs-at-scale

./: .gitignore  .semgrepignore  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: code-review-gate.sh
.githooks/: pre-commit
app/: db.py  main.py
scenes/phase-1-hooks/: README.md
scripts/ops/: attest-review.sh
semgrep/rules/: no-fstring-sql.yaml
tests/: test_api.py  test_features.py
