[project]
name = "self-healing-reviews"
version = "0.1.0"
description = "A layered code-review stack that cuts the PR noise before it drowns your team"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "semgrep>=1.90",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends(...) in parameter defaults is idiomatic; keep B008 armed for
# every other call-in-default.
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
